fixed spacing

--- a/webpage/Styles.css
+++ b/webpage/Styles.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.5em;
+  font-size: 3em;
 }
 h1, h2{
   font-family: "Helvetica", "Arial", sans-serif;
